push input to db.json using POST

--- a/react-gym/src/index.css
+++ b/react-gym/src/index.css
@@ -69,7 +69,7 @@
   border-radius: 8px;
   cursor: pointer;
 }
-/* create new blog form */
+/* create new Routine Input */
 .create {
   max-width: 400px;
   margin: 0 auto;
