added delete function for blog

--- a/react-gym/src/index.css
+++ b/react-gym/src/index.css
@@ -33,6 +33,14 @@
   margin: 40px auto;
   padding: 20px;
 }
+.routine-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
 /* routine previews / list */
 .routine-preview {
   padding: 10px 16px;
